/*
 * Copyright 2024 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package fcp.client;

import "fcp/client/engine/engine.proto";
import "tensorflow/core/framework/tensor.proto";

option java_package = "com.google.intelligence.fcp.client";
option java_multiple_files = true;

/**
 * This protocol buffer is used to pass TensorflowSpec-based plan outputs across
 * the JNI boundary so they can be accessed in compatibility tests.
 */
message FLRunnerTensorflowSpecResult {
  // The outcome of running the plan.
  engine.PhaseOutcome outcome = 1;
  // The location of the output checkpoint file, if one was created.
  string checkpoint_output_filename = 2;
  // A map of output tensor names and values, if any.
  map<string, tensorflow.TensorProto> output_tensors = 3 [deprecated = true];
  // The serialized TaskEligibilityInfo proto, if one was created.
  bytes task_eligibility_info = 4;
}
